  ~TeX-fold-begin-end-spec-list~.

- Add new custom option ~TeX-fold-alert-color~ which determines the
  color used when folding the ~\alert~ macro, defaults to ~red~.

- Add new support file =style/minted2.el= (=style/minted.el= is updated
  to package v3.1.2).

- Add preliminary support for parsing =\graphicspath= in
  =style/graphicx.el=.

* [14.0.7] - 2024-10-05

** Added

- Respect the value of ~TeX-output-dir~ when processing files with
  latexmk.  This means that the default value of ~TeX-command-list~ is
  changed.

- Add new support files =style/authblk.el=, =style/langscibook.cls=,
  =style/lstautogobble.el=, =style/lstlinebgrd.el=,
  =style/ninecolors.el=, =style/supertabular.el=, =style/tabularray.el=
  and =style/xtab.el=.

** Changed

- AUCTeX 13.3 marks the last standalone tarball release.  From now on,
  AUCTeX releases are made available through the
  [[ELPA:auctex.html][Emacs Lisp Package Archive (ELPA)]].  Distro
  packagers are encouraged to use the [[ELPA:auctex.html][ELPA]]
  packages as-is and install them under one of the new Emacs locations
  for system-wide packages, see ~package-directory-list~.

  At the same time, development is now done on the =main= branch and the
  =master= branch has been deleted.  Its last state has been pushed as
  =auctex-13= branch for archiving purposes but it won't get any updates
  anymore.

  For users who tracked the master branch: Do =git switch main= to
  switch to the main branch where development takes place nowadays.

- Move additions to the variable ~LaTeX-indent-environment-list~ for
  various tabular environments to =latex.el= from the respective style
  files.

** Fixed

- Fold argument of verbatim macros more accurately.

** Removed

- Remove the possibility to disable the side-wide installation with:
  #+begin_src emacs-lisp
    (unload-feature 'tex-site)
  #+end_src
  Using this form when installed from [[ELPA:auctex.html][ELPA]] will
  throw an error.

* [14.0.6] - 2024-06-30

** Added
